<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prepdroid</string>
    <string name="title_section1">PowerSchool</string>
    <string name="title_section2">Prep Webmail</string>
    <string name="title_section3">Bell Schedule</string>
    <string name="title_section4">My Schedule</string>
    <string name="title_section5">Announcements</string>
    <string name="title_section6">School Calendar</string>
    <string name="title_section7">Naviance</string>
    <string name="title_section8">Social Media</string>
    <string name="title_section9">Follett Shelf</string>
    <string name="title_section10">Prep Website</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_browser_back">Go Back</string>
    <string name="action_browser_forward">Go Forward</string>
    <string name="action_browser_reload">Refresh</string>
    <string name="action_about">About</string>
    <string name="about">This application was developed for St. Peter\'s Prep by Richard Messina, \'15. If you want to shoot me a message, feel free to email me at rivyzedev@gmail.com.</string>
    <string name="about_screen">About Screen</string>
    <string name="action_select_date">Dates</string>
    <string name="action_sm_facebook">Facebook</string>
    <string name="action_sm_twitter">Twitter</string>
    <string name="action_sm_facebook_prep">Saint Peter\'s Prep</string>
    <string name="action_sm_facebook_student_life">Prep Student Life</string>
    <string name="action_sm_facebook_ignatians">Ignatian Scholars</string>
    <string name="action_sm_facebook_kairos">Prep Kairos</string>
    <string name="action_sm_facebook_emmaus">Prep Emmaus</string>
    <string name="action_sm_facebook_marauders">Marauder Nation</string>
    <string name="action_sm_twitter_prep">Saint Peter\'s Prep</string>
    <string name="action_sm_twitter_student_life">Prep Student Life</string>
    <string name="action_sm_twitter_guidance">Prep Guidance</string>
    <string name="action_sm_twitter_ministry">Campus Ministry</string>
    <string name="action_sm_twitter_athletics">Prep Athletics</string>
    <string name="action_sm_twitter_marauders">Marauder Nation</string>
    <string name="action_bell">More</string>
    <string name="action_bell_reg">Regular Order</string>
    <string name="action_bell_assem">Assembly Order</string>
    <string name="action_bell_late">Late Start Order</string>
    <string name="action_bell_xy">XY Order</string>
    <string name="action_reset_my_sched">Reset</string>
    <string name="closing_message">Completely exit Prepdroid? You will be signed-out of anything you\'re currently logged into.</string>
    <string name="my_sched_tv_school_year">Current School Year:</string>
    <string name="my_sched_et_school_year_hint">ex. 2013&#8211;2014</string>
    <string name="my_sched_tv_IDnum">Student ID Number:</string>
    <string name="my_sched_et_IDnum_hint">ex. 151730</string>
    <string name="my_sched_button">Set My Schedule</string>

</resources>