<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testwebapplication.MainActivity" >

    <item
        android:id="@+id/action_sm_facebook"
        android:icon="@drawable/ic_facebook_circle_gray"
        android:orderInCategory="1"
        android:title="@string/action_sm_facebook"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sm_facebook_prep"
                android:title="@string/action_sm_facebook_prep"/>
            <item
                android:id="@+id/action_sm_facebook_student_life"
                android:title="@string/action_sm_facebook_student_life"/>
            <item
                android:id="@+id/action_sm_facebook_ignatians"
                android:title="@string/action_sm_facebook_ignatians"/>
            <item
                android:id="@+id/action_sm_facebook_kairos"
                android:title="@string/action_sm_facebook_kairos"/>
            <item
                android:id="@+id/action_sm_facebook_emmaus"
                android:title="@string/action_sm_facebook_emmaus"/>
            <item
                android:id="@+id/action_sm_facebook_marauders"
                android:title="@string/action_sm_facebook_marauders"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_sm_twitter"
        android:icon="@drawable/ic_twitter_circle_gray"
        android:orderInCategory="2"
        android:title="@string/action_sm_twitter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sm_twitter_prep"
                android:title="@string/action_sm_twitter_prep"/>
            <item
                android:id="@+id/action_sm_twitter_student_life"
                android:title="@string/action_sm_twitter_student_life"/>
            <item
                android:id="@+id/action_sm_twitter_guidance"
                android:title="@string/action_sm_twitter_guidance"/>
            <item
                android:id="@+id/action_sm_twitter_ministry"
                android:title="@string/action_sm_twitter_ministry"/>
            <item
                android:id="@+id/action_sm_twitter_athletics"
                android:title="@string/action_sm_twitter_athletics"/>
            <item
                android:id="@+id/action_sm_twitter_marauders"
                android:title="@string/action_sm_twitter_marauders"/>
        </menu>
    </item>
    <item
        android:id="@id/action_browser_back"
        android:icon="@drawable/ic_action_navigation_previous_item"
        android:orderInCategory="3"
        android:title="@string/action_browser_back"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/action_browser_reload"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:orderInCategory="4"
        android:title="@string/action_browser_reload"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/action_browser_forward"
        android:icon="@drawable/ic_action_navigation_next_item"
        android:orderInCategory="5"
        android:title="@string/action_browser_forward"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>