<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testwebapplication.MainActivity" >

    <item
        android:id="@+id/action_bell"
        android:orderInCategory="1"
        android:title="@string/action_bell"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_bell_reg"
                android:title="@string/action_bell_reg"/>
            <item
                android:id="@+id/action_bell_late"
                android:title="@string/action_bell_late"/>
            <item
                android:id="@+id/action_bell_assem"
                android:title="@string/action_bell_assem"/>
            <item
                android:id="@+id/action_bell_xy"
                android:title="@string/action_bell_xy"/>
        </menu>
    </item>
    <item
        android:id="@id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>