<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testwebapplication.MainActivity" >

    <item
        android:id="@+id/action_select_date"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_collections_go_to_today"
        android:title="@string/action_select_date"
        app:showAsAction="always"/>
    <item
        android:id="@id/action_browser_back"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_navigation_previous_item"
        android:title="@string/action_browser_back"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/action_browser_reload"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:orderInCategory="3"
        android:title="@string/action_browser_reload"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/action_browser_forward"
        android:orderInCategory="4"
        android:icon="@drawable/ic_action_navigation_next_item"
        android:title="@string/action_browser_forward"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>