<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:padding="@dimen/activity_horizontal_margin" >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/my_sched_tv_school_year"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/my_sched_et_school_year_hint"
                android:inputType="date"
                android:textColor="@color/white" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/my_sched_tv_IDnum"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextIDnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/my_sched_et_IDnum_hint"
                android:inputType="date"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonFinishID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/my_sched_button"
        android:textAlignment="center"
        android:textColor="@color/white" />

</RelativeLayout>
